--- a/style.css
+++ b/style.css
@@ -378,10 +378,6 @@ div.tweet-box>div>h3 {
     float: left;
     margin: 0;
     font-size: 1vw;
-    /*border-radius: 5px;*/
-    /*height: 300px;*/
-    /*border: 1px solid black;*/
-    /*background-color: rgba(255,255,255,0.9);*/
 }
 
 .track-info {
@@ -397,12 +393,9 @@ span.track-info {
 #pic {
     width: 100%;
     height: 100%;
+    height: 100%;
 }
-/*#twitter-share-button {*/
-/*position: fixed;*/
-/*top: 5%;*/
-/*left: 10%;*/
-/*}*/
+
 a.twitter-share-button {
     position: absolute;
     top: 20px;
@@ -419,7 +412,10 @@ a.twitter-share-button {
     box-shadow: 0 7px 8px -2px #000;
     transition: all 0.2s;
 }
+
 #twitter_btn_logo {
     width:20px;
     height:20px;
 }
+
+
