--- a/responsive.css
+++ b/responsive.css
@@ -164,38 +164,220 @@
 
 }
 
-/*************************** LANDSCAPE ********************************/
+/*!*************************** LANDSCAPE ********************************!*/
 
-@media (min-width: 580px) and (max-width: 767px) {
-    * {
-        margin: 0;
-        padding: 0;
-    }
+/*@media (min-width: 580px) and (max-width: 767px) {*/
+    /** {*/
+        /*margin: 0;*/
+        /*padding: 0;*/
+    /*}*/
 
-    body {
-        background-size: 48px 90px;
-    }
+    /*body {*/
+        /*background-size: 48px 90px;*/
+    /*}*/
 
-    .main-heading {
-        font-size: 9vh;
-        position: relative;
-        left: -14vw;
-        margin-top: -4vh;
-    }
+    /*.main-heading {*/
+        /*font-size: 9vh;*/
+        /*position: relative;*/
+        /*left: -14vw;*/
+        /*margin-top: -4vh;*/
+    /*}*/
 
-    .landing {
-        margin: 0;
-    }
+    /*.landing {*/
+        /*margin-top: 0;*/
+    /*}*/
 
-    #verbSelect {
-        width: 30vw;
-        position: relative;
-        left: -15vw;
-    }
+    /*#verbSelect {*/
+        /*width: 30vw;*/
+        /*position: relative;*/
+        /*left: -16vw;*/
+    /*}*/
 
-    .blurb {
-        font-size: 5vh;
-        margin-left: -29vw;
-    }
+    /*.blurb {*/
+        /*font-size: 5vh;*/
+        /*margin-left: -29vw;*/
+    /*}*/
 
-}
+    /*select {*/
+        /*font-size: 4vh;*/
+        /*padding: 1vh 1vw 1vh 1vw;*/
+        /*position: relative;*/
+        /*left: -15vw;*/
+        /*width: 50vw;*/
+    /*}*/
+
+    /*.mdl-selectfield {*/
+        /*padding: 1vh 0vw 1vh 0vw;*/
+    /*}*/
+
+    /*#verbSelect {*/
+        /*position: relative;*/
+        /*padding-left: 12vw;*/
+        /*padding-bottom: 0;*/
+        /*padding-top: 0;*/
+    /*}*/
+
+
+    /*#nounInput {*/
+        /*width: 30vw;*/
+        /*left: 32vw;*/
+    /*}*/
+
+    /*input[type=text] {*/
+        /*font-size: 4vh;*/
+    /*}*/
+
+    /*a.now-button {*/
+        /*font-size: 4vh;*/
+        /*text-shadow: 0 1px 1px #344152;*/
+        /*text-decoration: none;*/
+        /*color: white;*/
+        /*width: 100px;*/
+        /*height: 100px;*/
+        /*top: 1px;*/
+        /*left: 2px;*/
+        /*background: #8BC34A;*/
+        /*position: relative;*/
+        /*padding: 3px 59px;*/
+        /*font-size: 50px;*/
+        /*border-radius: 5px;*/
+        /*box-shadow: 0 7px 8px -2px #000;*/
+        /*transition: all 0.2s;*/
+    /*}*/
+
+    /*.button-group {*/
+        /*position: relative;*/
+        /*left: -14vw;*/
+        /*top: -2vh;*/
+    /*}*/
+
+    /*.rb-wrapper {*/
+        /*margin-top: 15px;*/
+    /*}*/
+
+    /*.input-container {*/
+        /*height: 60px;*/
+        /*position: relative;*/
+        /*left: 20vw;*/
+    /*}*/
+
+    /*.container {*/
+        /*margin-top: -16vh;*/
+    /*}*/
+
+    /*a.random-button {*/
+        /*text-shadow: 0 1px 1px #344152;*/
+        /*text-decoration: none;*/
+        /*color: white;*/
+        /*width: 500px;*/
+        /*margin-top: 15px;*/
+        /*height: 70px;*/
+        /*background: #BA68C8;*/
+        /*position: relative;*/
+        /*padding: 6px 30px;*/
+        /*font-size: 3vh;*/
+        /*left: 2px;*/
+        /*border-radius: 5px;*/
+        /*box-shadow: 0 7px 8px -2px #000;*/
+        /*transition: all 0.2s;*/
+    /*}*/
+
+    /*a.start-over-btn {*/
+        /*position: absolute;*/
+        /*top: 11vh;*/
+        /*left: 20px;*/
+        /*text-shadow: 0 1px 1px #344152;*/
+        /*text-decoration: none;*/
+        /*color: white;*/
+        /*width: 100px;*/
+        /*height: 30px;*/
+        /*background-color: #ef5350;*/
+        /*padding: 7px;*/
+        /*font-size: 13px;*/
+        /*border-radius: 5px;*/
+        /*box-shadow: 0 3px 4px -2px #000;*/
+        /*transition: all 0.2s;*/
+    /*}*/
+
+    /*a.twitter-share-button {*/
+        /*position: absolute;*/
+        /*top: 11vh;*/
+        /*left: 37vw;*/
+        /*text-shadow: 0 1px 1px #344152;*/
+        /*text-decoration: none;*/
+        /*color: white;*/
+        /*width: 100px;*/
+        /*height: 30px;*/
+        /*background-color: #55acee;*/
+        /*padding: 6px;*/
+        /*font-size: 13px;*/
+        /*border-radius: 5px;*/
+        /*box-shadow: 0 3px 4px -2px #000;*/
+        /*transition: all 0.2s;*/
+    /*}*/
+
+    /*#read {*/
+        /*position: relative;*/
+        /*left: -15.5vw;*/
+        /*margin-top: 6vh;*/
+    /*}*/
+
+    /*.tweets {*/
+        /*width: 64vw;*/
+        /*margin-bottom: -10px;*/
+    /*}*/
+
+    /*.media-heading-name {*/
+        /*font-size: 1.5vh;*/
+        /*margin: 0;*/
+        /*padding: 0;*/
+    /*}*/
+
+    /*.name, .userName {*/
+        /*font-size: 1.5vh;*/
+    /*}*/
+
+    /*.text {*/
+        /*font-size: 1.25vh;*/
+    /*}*/
+
+    /*.well {*/
+        /*padding: 1px;*/
+    /*}*/
+
+    /*.prev {*/
+        /*top: 62%;*/
+    /*}*/
+
+    /*.next {*/
+        /*right: 33%;*/
+        /*top: 62%;*/
+    /*}*/
+
+    /*#ytplayer {*/
+        /*width: 65vw;*/
+        /*position: relative;*/
+        /*left: -16vw;*/
+        /*top: 10vh;*/
+        /*height: 19vh;*/
+    /*}*/
+
+    /*#listenInfoDiv {*/
+        /*width: 64vw;*/
+        /*height: 22vh;*/
+        /*top: 21%;*/
+        /*left: 31.5%;*/
+    /*}*/
+
+    /*#audio {*/
+        /*position: relative;*/
+        /*left: -15.5vw;*/
+        /*width: 65vw;*/
+    /*}*/
+
+    /*.glyphicon-user, .glyphicon-music, .track-info {*/
+        /*font-size: 15px;*/
+    /*}*/
+
+
+/*}*/
